--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -54,6 +54,7 @@
     <script src="js/lml/ToolsController.js" type="text/javascript"></script>
     <script src="js/lml/MainController.js" type="text/javascript"></script>
     <script src="js/lml/AjaxCallService.js" type="text/javascript"></script>
+    <script src="js/lml/TooltipPictureDirective.js" type="text/javascript"></script>
     <script src="js/lml/TooltipDirective.js" type="text/javascript"></script>
     <!-- The angular module have to loaded last. -->
     <script src="js/lml/LabManagerLight.js" type="text/javascript"></script>
