--- a/src/lml/html/vm_overview.html
+++ b/src/lml/html/vm_overview.html
@@ -50,7 +50,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr id="{{vm.uuid}}" data-ng-repeat="vm in filteredData | orderBy:sort.column:sort.descending">
+            <tr id="{{vm.uuid}}" data-ng-repeat="vm in filteredData | filter:{ deleted: '!'+true} | orderBy:sort.column:sort.descending">
                 <td>
                     <input ng-disabled="isServerRequestRunning" type="checkbox" ng-model="vm.selected"
                            value="{{vm.uuid}}">
@@ -75,9 +75,8 @@
         <div class="vm_action_panel">
             <a ng-click="detonate()" ng-disabled="{{detonateDisabled}}" class="button"
                title="Reinstall selected machines"><img src="images/bomb.png" class="button_image"/>&nbsp;Detonate</a>
-            <a id="destroy_button" ng-disabled="{{destroyDisabled}}" class="button confirm"
-               title="Delete the selected machine(s) physically"
-               rel="Really delete the selected machines physically?"><img src="images/delete.png" class="button_image"/>&nbsp;Delete</a>
+            <a id="destroy_button" ng-click="destroy()" ng-disabled="{{destroyDisabled}}" class="button"
+               title="Delete the selected machine(s) physically"><img src="images/delete.png" class="button_image"/>&nbsp;Delete</a>
         </div>
     </form>
 
