tool-tab: removed jQuery handling in the tools tab

--- a/src/lml/html/tools.html
+++ b/src/lml/html/tools.html
@@ -1,11 +1,12 @@
 <div class="main_content" id="tools" data-ng-controller="ToolsController">
 	<p>
-		<span id="clear_button" class="button" title="Clear tool output">Clear</span>
-		<a id="hostdatetime_button" class="button" href="hostdatetime.pl" title="vSphere Time Sync Check">vSphere Time Sync Check</a>
-		<a id="license_button" class="button" href="LICENSE.TXT" title="Software License">Software License</a>
+		<span id="clear_button" class="button" data-ng-click="clear()" title="Clear tool output">Clear</span>
+		<a id="hostdatetime_button" class="button" data-ng-click="showVSphereTimeSyncCheck($event)" href="hostdatetime.pl" title="vSphere Time Sync Check">vSphere Time Sync Check</a>
+		<a id="license_button" class="button" data-ng-click="showSoftwareLicenses($event)" href="LICENSE.TXT" title="Software License">Software License</a>
 	</p>
-	<fieldset id="tools_frame"><legend id="tools_title"></legend>
+	<fieldset data-ng-show="!!content" id="tools_frame"><legend id="tools_title">{{title}}</legend>
 		<div id="tools_content">
+            <pre>{{content}}</pre>
 		</div>
 	</fieldset>
 </div>
