removed jQuery and it's plugins

--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -3,20 +3,13 @@
 <head>
    <title>Lab Manager Light</title>
    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-   <link rel="stylesheet" type="text/css" href="css/jquery.cluetip.css" />
-   <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.css" />
-   <link rel="stylesheet" type="text/css" href="css/TableTools.css" />
    <link rel="stylesheet" type="text/css" href="css/bootstrap-2.3.2.min.css" />
    <link rel="stylesheet" type="text/css" href="css/lml.css" />
-   <link rel="stylesheet" type="text/css" href="css/jquery-ui-1.10.3.custom.css" />
    <link rel="stylesheet" type="text/css" href="css/lml-print.css" media="print"/>
    <script src="js/angular.min.js" type="text/javascript"></script>
    <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
    <script src="js/ng-csv.min.js" type="text/javascript"></script>
-   <script src="js/ui-bootstrap-tpls-0.9.0.js" type="text/javascript"></script>
-   <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
-   <script src="js/jquery.cluetip.min.js" type="text/javascript"></script>
-   <script src="js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
+   <script src="js/ui-bootstrap-tpls-0.9.0.min.js" type="text/javascript"></script>
 
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
