frontend: refactored angular module structure

--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -40,6 +40,8 @@
         </div>
         <div class="right"><a href="api/index.html">REST API</a></div>
     </div>
+    <!-- The angular module have to loaded first. -->
+    <script src="js/lml/LabManagerLight.js" type="text/javascript"></script>
     <script src="js/lml/VmOverviewController.js" type="text/javascript"></script>
     <script src="js/lml/NewVmController.js" type="text/javascript"></script>
     <script src="js/lml/HostOverviewController.js" type="text/javascript"></script>
@@ -49,8 +51,7 @@
     <script src="js/lml/AjaxCallService.js" type="text/javascript"></script>
     <script src="js/lml/TooltipPictureDirective.js" type="text/javascript"></script>
     <script src="js/lml/TooltipDirective.js" type="text/javascript"></script>
-    <!-- The angular module have to loaded last. -->
-    <script src="js/lml/LabManagerLight.js" type="text/javascript"></script>
+
 
 
 
