--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -51,6 +51,7 @@
     <script src="js/lml/AjaxCallService.js" type="text/javascript"></script>
     <script src="js/lml/TooltipPictureDirective.js" type="text/javascript"></script>
     <script src="js/lml/TooltipDirective.js" type="text/javascript"></script>
+    <script src="js/lml/VmOverviewActionsFactory.js" type="text/javascript"></script>
 
 
 
