frontend: -bumped angular version to 1.2.16 -first javascript tests

--- a/src/lml/html/host_overview.html
+++ b/src/lml/html/host_overview.html
@@ -1,6 +1,5 @@
-
 <div class="main_content" id="host_overview" data-ng-controller="HostOverviewController" ng-disabled="isServerRequestRunning">
-  <table id="hostlist_table" border="1" cellpadding="3" cellspacing="0">
+  <table id="hostlist_table" border="1" cellpadding="3" cellspacing="0" class="table table-striped">
     <thead id="hostlist">
      <tr valign ="top">
        <th title="Click to sort">Name</th>
@@ -35,7 +34,6 @@
       <td>{{host.hardware}}</td>
       <td>{{host.product}}</td>
     </tr>
-
   </tbody>
 </table>
 </div>
