--- a/src/lml/index.html
+++ b/src/lml/index.html
@@ -6,10 +6,11 @@
    <link rel="stylesheet" type="text/css" href="css/bootstrap-2.3.2.min.css" />
    <link rel="stylesheet" type="text/css" href="css/lml.css" />
    <link rel="stylesheet" type="text/css" href="css/lml-print.css" media="print"/>
-   <script src="js/angular.min.js" type="text/javascript"></script>
-   <script src="js/angular-sanitize.min.js" type="text/javascript"></script>
-   <script src="js/ng-csv.min.js" type="text/javascript"></script>
-   <script src="js/ui-bootstrap-tpls-0.9.0.min.js" type="text/javascript"></script>
+   <script src="js/lib/angular-1.2.16/angular.min.js" type="text/javascript"></script>
+   <script src="js/lib/angular-1.2.16/angular-route.min.js" type="text/javascript"></script>
+   <script src="js/lib/angular-1.2.16/angular-sanitize.min.js" type="text/javascript"></script>
+   <script src="js/lib/ng-csv.min.js" type="text/javascript"></script>
+   <script src="js/lib/ui-bootstrap-tpls-0.9.0.min.js" type="text/javascript"></script>
 
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
@@ -32,7 +33,7 @@
       <div data-ng-view></div>
     </div>
 
- 
+
     <div id="footer">
         <div class="left">
           <a href="https://github.com/ImmobilienScout24/lab-manager-light" target="_blank">Lab Manager Light</a> is licensed under the <a href="http://www.gnu.org/licenses/gpl.html" target="_blank">GNU General Public License</a>.
