--- a/src/lml/html/new_vm.html
+++ b/src/lml/html/new_vm.html
@@ -36,7 +36,7 @@
             <table>
                 <tr>
                     <td><p>Name</p></td>
-                    <td><input type="text" data-ng-model="new_vm_name"/></td>
+                    <td><input type="text" autofocus data-ng-model="new_vm_name"/></td>
                 </tr>
                 <tr>
                     <td><p>ESX-Host</p></td>
