Hard Reset is better description of what this button does. Closes #53

--- a/src/lml/html/vm_overview.html
+++ b/src/lml/html/vm_overview.html
@@ -91,7 +91,7 @@
 
         <div class="vm_action_panel">
             <a id="detonate_button" ng-click="detonate()" class="button"
-               title="Reinstall selected machines"><img src="images/bomb.png" class="button_image"/>&nbsp;Detonate</a>
+               title="Reinstall selected machines"><img src="images/bomb.png" class="button_image"/>&nbsp;Hard Reset</a>
             <a id="destroy_button" ng-click="destroy()" class="button"
                title="Delete the selected machine(s) physically"><img src="images/delete.png" class="button_image"/>&nbsp;Delete</a>
         </div>
